k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrom-works-service
spec:
  selector:
    app: chrom-works
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
